tests added. snapshot testing, unit testing of reducers, asyncReducer , and tests of API + fixes

--- a/package.json
+++ b/package.json
@@ -5,22 +5,26 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start": "webpack-dev-server --hot --open",
+    "start": "webpack-dev-server --mode development",
     "nodejs": "nodemon --exec babel-node src/server/bin/www",
     "nodetrue": "node  src/server/bin/www  ",
-    "develop": "npm run nodejs && npm run build"
+    "develop": "npm run nodejs && npm run build",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/node": "^7.7.0",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.4",
+    "@babel/node": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@jest/globals": "latest",
+    "@testing-library/react": "^10.4.3",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
+    "babel-jest": "^26.1.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
@@ -29,30 +33,38 @@
     "body-parser": "latest",
     "clsx": "latest",
     "cors": "^2.8.5",
-    "css-loader": "^3.2.0",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^4.2.0",
+    "css-loader": "^3.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.3.0",
+    "extract-loader": "^3.2.0",
+    "fetch-mock": "^9.10.3",
+    "file-loader": "^4.3.0",
+    "history": "latest",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mongoose": "^5.7.9",
+    "jest": "^26.1.0",
+    "mongoose": "^5.9.20",
     "multer": "^1.4.2",
-    "node-sass": "^4.13.0",
-    "react-hot-loader": "^4.12.15",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "node-sass": "^4.14.1",
+    "react-hot-loader": "^4.12.21",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react-test-renderer": "latest",
+    "redux-mock-store": "^1.5.4",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "url-loader": "^2.3.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.6.1",
-    "@material-ui/icons": "^4.5.1",
-    "axios": "^0.19.0",
-    "bcrypt": "^3.0.6",
-    "cookie-parser": "~1.4.4",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
+    "bcrypt": "^3.0.8",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "form-data": "^3.0.0",
@@ -60,17 +72,28 @@
     "hashlib": "^1.0.1",
     "js-sha1": "^0.6.0",
     "jsonwebtoken": "^8.5.1",
-    "material-ui-dropzone": "^2.4.5",
-    "mongodb": "^3.3.3",
+    "material-ui-dropzone": "^2.5.0",
+    "mongodb": "^3.5.9",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.4",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.1",
-    "react-router": "^5.1.2",
-    "redux": "^4.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "sharp": "^0.23.3"
+    "sharp": "^0.23.4"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "!node_modules/react-runtime"
+    ],
+    "globals": {
+      "__DEV__": true
+    }
   }
 }
