--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.10.4",
     "@jest/globals": "latest",
     "@testing-library/react": "^10.4.3",
+    "axios-mock-adapter": "^1.18.1",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
