--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode development",
-    "start": "webpack-dev-server --mode development",
+    "build": "webpack --watch --mode development",
+    "start": "webpack-dev-server --hot --mode development",
     "nodejs": "nodemon --exec babel-node src/server/bin/www",
     "nodetrue": "node  src/server/bin/www  ",
     "develop": "npm run nodejs && npm run build",
@@ -45,6 +45,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "mongoose": "^5.9.20",
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
@@ -55,6 +56,7 @@
     "redux-mock-store": "^1.5.4",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
@@ -77,6 +79,7 @@
     "mongodb": "^3.5.9",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
