--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --watch --mode development",
     "start": "webpack-dev-server --hot --mode development",
     "nodejs": "nodemon --exec babel-node src/server/bin/www",
-    "nodetrue": "node  src/server/bin/www  ",
+    "nodetrue": "node src/server/bin/www",
+    "nodedocker": "node src/server/bin/www hostname=mydb",
     "develop": "npm run nodejs && npm run build",
     "test": "jest"
   },
@@ -66,7 +67,7 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
-    "bcrypt": "^3.0.8",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -75,6 +76,7 @@
     "hashlib": "^1.0.1",
     "js-sha1": "^0.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "material-ui-dropzone": "^2.5.0",
     "mongodb": "^3.5.9",
     "morgan": "~1.9.1",
