--- a/package.json
+++ b/package.json
@@ -95,6 +95,10 @@
     "transform": {
       "^.+\\.js?$": "babel-jest"
     },
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__test__/__mocks__/fileMock.js",
+      "\\.(css|sass)$": "<rootDir>/__test__/__mocks__/styleMock.js"
+    },
     "transformIgnorePatterns": [
       "!node_modules/react-runtime"
     ],
